[C#] - Delete 구현 완료 - Update 추가

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,12 @@ CRUDLogin/CRUDLogin/obj/Debug/CRUDLogin.Form02.resources
 CRUDLogin/CRUDLogin/obj/Debug/CRUDLogin.Form03.resources
 CRUDLogin/CRUDLogin/obj/Debug/CRUDLogin.pdb
 CRUDLogin/CRUDLogin/obj/Debug/CRUDLogin.Properties.Resources.resources
+CRUDLogin/.vs/CRUDLogin/FileContentIndex/072ea273-7c7e-4d4d-9e30-a5058c8923fe.vsidx
+CRUDLogin/.vs/CRUDLogin/FileContentIndex/1e5dd73f-697f-4d92-9b51-c664d9ea83a3.vsidx
+CRUDLogin/.vs/CRUDLogin/FileContentIndex/73710fb4-baee-41e2-aa99-c9453bb99fe0.vsidx
+CRUDLogin/.vs/CRUDLogin/FileContentIndex/caea759f-213e-429f-8643-5b7fc49d28f9.vsidx
+CRUDLogin/CRUDLogin/obj/Debug/CRUDLogin.DIg로그인후.resources
+CRUDLogin/CRUDLogin/obj/Debug/CRUDLogin.DIg회원정보수정.resources
+CRUDLogin/CRUDLogin/obj/Debug/CRUDLogin.ImformaionForm.resources
+CRUDLogin/CRUDLogin/obj/Debug/CRUDLogin.LoginForm.resources
+CRUDLogin/CRUDLogin/obj/Debug/CRUDLogin.userAddForm.resources
